# Video-Sprite-Sheet-Generator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
scripts/: make_test_videos.ps1
src/: main.cpp
src/app/: Application.cpp  Application.h
src/cli/: CliParser.cpp  CliParser.h  ProgressReporter.cpp  ProgressReporter.h
src/core/: AppConfig.cpp  AppConfig.h  AppError.cpp  AppError.h  CancellationToken.h  GridLayout.cpp  GridLayout.h  Rect.h  TimestampPlanner.cpp  TimestampPlanner.h  VideoInfo.h  VttCue.h
src/interfaces/: IFileWriter.h  IVideoSource.h
src/media/: Frame.cpp  Frame.h  FrameScaler.cpp  FrameScaler.h  ImageEncoder.cpp  ImageEncoder.h  ImageFormat.cpp  ImageFormat.h  SpriteSheet.cpp  SpriteSheet.h  VideoFile.cpp  VideoFile.h
src/output/: AtomicFileWriter.cpp  AtomicFileWriter.h  VttCueBuilder.cpp  VttCueBuilder.h  WebVttWriter.cpp  WebVttWriter.h
src/platform/: Platform.cpp  Platform.h
tests/: CMakeLists.txt  test_app_config.cpp  test_application.cpp  test_atomic_file_writer.cpp  test_cli_parser.cpp  test_core_types.cpp  test_grid_layout.cpp  test_image_format.cpp  test_pixel_pipeline.cpp  test_progress_reporter.cpp  test_timestamp_planner.cpp  test_video_file.cpp  test_vtt.cpp
tests/fakes/: FakeVideoSource.h  MemoryFileWriter.h
